--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Adminpro</title>
+    <title>Fradmin-pro</title>
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png">
 
     <!-- Bootstrap Core CSS -->
@@ -26,7 +26,7 @@
     <div class="preloader">
         <div class="loader">
             <div class="loader__figure"></div>
-            <p class="loader__label">Admin Pro</p>
+            <p class="loader__label">Fradmin Pro</p>
         </div>
     </div>
 
